<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quadroid Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="pref_key_login_token">login_token</string>
    <string name="logged_in">Logged In</string>
    <string name="logged_out">Logged Out</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to Quadroid</string>
    <string name="logging_in">Logging in...</string>
    <string name="registering_gcm">Registering for Cloud Messaging...</string>
    <string name="login_success">Success! You will now receive Quadroid landmark alerts!</string>
    <string name="must_login_text">In order to use Quadroid and receive land marker alarms, you must login using username and password.</string>
    <string name="logged_in_text">You are logged in.</string>
    <string name="pref_key_gcm_reg_id">gcm_registration_id</string>
    <string name="error_registering_gcm">Something went wrong while GM setup. Please try again.</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="new_landmark_alarm">New landmark alarm</string>
    <string name="view">View</string>
    <string name="error_login">Error while logging in: %1$s</string>
	<string name="error_lm_alarm_ivalid">Received landmarker alarm, but image is missing</string>
</resources>
